Fixed sidebar spacing effecting all pages

--- a/src/Landing.css
+++ b/src/Landing.css
@@ -1,4 +1,4 @@
-body{
+div#landing-page{
     padding-right:max(20%, 200px);
     margin:0;
 }
